--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="max-w-screen overflow-hidden">
+<html lang="en" class="max-w-screen">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
 		<title>Vite + React</title>
 	</head>
 	<body>
-		<div id="root" class="min-h-screen"></div>
+		<div id="root" class="min-h-screen bg-gray-300 overflow-hidden"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
